--- a/views/Home/index.html
+++ b/views/Home/index.html
@@ -42,13 +42,13 @@
   </div>
 
 <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <header id="header" class="fixed-top fixheader">
     <div class="container d-flex align-items-center">
 
        <a href="/index.html" class="logo me-auto"><img src="css/img/fotosreymar/thumbnail_reymar logo1.png" alt="" class="img-fluid"></a>
 
-      <nav id="navbar" class="navbar order-last order-lg-0">
-        <ul>
+      <nav id="navbar" class=" navbar order-last order-lg-0">
+        <ul class="btnMenu ">
           <li><a class="nav-link scrollto active" href="/index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="/contacto">Contacto</a></li>
           <li><a class="nav-link scrollto" href="#">Horarios</a></li>
@@ -56,10 +56,10 @@
           
           
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <i class="bi bi-list mobile-nav-toggle" id="btnh"></i>
       </nav><!-- .navbar -->
 
-      <a href="/formulario" class="appointment-btn scrollto"><span class="d-none d-md-inline">Generar Cita</span></a>
+      <a href="/formulario" class="appointment-btn scrollto"><span class="d-md-inline">Generar Cita</span></a>
     </div>
   </header>
 <!-- End Header -->
@@ -396,7 +396,7 @@
 <!-- End Footer -->
 
 
-
+<script src="./index.js"></script>
 </body>
 
 </html>
