--- a/views/historial/index.html
+++ b/views/historial/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/dashboard.css">
     <link href="/ss/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="/css/img/fotosreymar/thumbnail_reymar logo6.png" rel="icon">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
@@ -57,12 +58,7 @@
                     
                     </div>
 
-                    <table id="pedidoContainer2" style="#pedidoscontainer table{
-                        width: 100%;
-                    }
-                    #pedidoscontainer table tr{
-                        border-bottom: 1px solid black;
-                    }">
+                    <table id="pedidoContainer2" class="tablaC">
 
                     </table>
                        
