--- a/views/Home/css/style.css
+++ b/views/Home/css/style.css
@@ -111,7 +111,7 @@ h6 {
 
 #header .logo img {
   max-height: 50px;
-  margin: 0 0 0 50px;
+  margin: auto;
 }
 
 /*-----------------------------------------
@@ -134,12 +134,6 @@ h6 {
   color: #fff;
 }
 
-@media (max-width: 768px) {
-  .appointment-btn {
-    margin-right: 10px;
-    padding: 20px 50px;
-  }
-}
 
 
 /*--------------------------------------------------------------
@@ -285,9 +279,22 @@ h6 {
   .mobile-nav-toggle {
     display: block;
   }
+  .footer-logo img{
+    width: 100%;
+    height: 100%;
+    margin: 0 0 0 0;
+  }
+  
 
   .navbar ul {
-    display: none;
+    display: block;
+    position: absolute;
+    margin-top: 50px;
+    right: 10px;
+    bottom: 0;
+    top: 0;
+    
+    
   }
 }
 
@@ -809,9 +816,9 @@ section {
 }
 
 .footer-logo img{
-  width: 120%;
-  height: 120%;
-  margin: 10px 0 0 50px;
+  width: 100%;
+  height: 100%;
+  margin: auto;
 }
 
 /*--------------------------------------------------------------
@@ -1070,4 +1077,17 @@ header .current-date{
 
 .show-notification {
   display: block;
+}
+
+
+@media (max-width: 768px) {
+  .appointment-btn {
+    margin-right: 10px;
+    padding: 10px;
+  }
+  .fixheader{
+    position: relative;
+  }
+
+
 }
