--- a/views/formulario/index.html
+++ b/views/formulario/index.html
@@ -51,7 +51,7 @@
        <a href="/index.html" class="logo me-auto"><img src="/css/img/fotosreymar/thumbnail_reymar logo1.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
-        <ul>
+        <ul class="btnMenu">
           <li><a class="nav-link scrollto active" href="/index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="/contacto">Contacto</a></li>
           <li><a class="nav-link scrollto" href="#">Horarios</a></li>
@@ -59,7 +59,7 @@
           
           
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <i class="bi bi-list mobile-nav-toggle" id="btnh"></i>
       </nav><!-- .navbar -->
 
       <a href="/nuevacita" class="appointment-btn scrollto"><span class="d-none d-md-inline">Generar Cita</span></a>
@@ -219,6 +219,7 @@
 <!-- End Footer -->
 
 <script src="/formulario/index.js"></script>
+<script src="/formulario/index2.js"></script>
 </body>
 
 </html>
