--- a/views/mensajes/index.html
+++ b/views/mensajes/index.html
@@ -58,12 +58,7 @@
                     
                     </div>
                        
-                    <table id="pedidoContainer" style="#pedidoscontainer table{
-                        width: 100%;
-                    }
-                    #pedidoscontainer table tr{
-                        border-bottom: 1px solid black;
-                    }">
+                    <table id="pedidoContainer" class="tablaC">
 
                     </table>
                        
