--- a/views/pagos/index.html
+++ b/views/pagos/index.html
@@ -57,12 +57,7 @@
                     
                     </div> 
                     
-                    <table id="pedidoContainer3" style="#pedidoscontainer table{
-                        width: 100%;
-                    }
-                    #pedidoscontainer table tr{
-                        border-bottom: 1px solid black;
-                    }">
+                    <table id="pedidoContainer3" class="tablaC">
 
                     </table>
             </main>
