--- a/views/pago/index.html
+++ b/views/pago/index.html
@@ -114,6 +114,10 @@
       <input type="time" class="form-control" name="hora" id="hora" placeholder="Ingresa la hora del pago">
     </div>
 
+    <div>
+      <p>Costo total de la cita: 30$, costos adicionales se te notificaran en consulta</p>
+    </div>
+
 
   <button type="submit" class="btn btn-primary" style="margin-top: 2rem;" id="formpago">Finalizar</button>
     
